--- a/changelog.txt
+++ b/changelog.txt
@@ -41,3 +41,8 @@ v1.3.0-alpha
 - Added working special request
 - Fixed multiple bugs caused by addin special request
 - Added Admin Action logging
+
+v1.4.0-alpha
+- Added Sign up email verification
+
+v1.0.0-beta
